# rustylol

./: .gitignore  Cargo.toml  README.md
admin/: package-lock.json  package.json
admin/src/: App.css  App.js  Command.js  CommandsList.js  Variation.js  index.js
admin/src/api/: Api.js
admin/src/auth/: callback.js  login.js
backend/: Cargo.toml  test.ron
backend/config/: example.json
backend/src/: cors.rs  main.rs  settings.rs  utils.rs
backend/src/auth/: auth_provider.rs  auth_value.rs  error.rs  mod.rs  rocket_guard.rs
backend/src/auth/providers/: azure_oauth.rs  google_oauth.rs  mod.rs
backend/src/http/: api_auth.rs  api_commands.rs  mod.rs  static_files.rs
backend/src/models/: mod.rs  requests.rs
backend/src/storage/: file_system.rs  mod.rs
help/: package-lock.json  package.json
help/src/: App.js
