[package]
name = "rustylol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strfmt = "0.1.6"

[dependencies.rocket]
version = "0.5.0-rc"
features = ["json"]

[dependencies.rustbreak]
version = "2"
features = ["ron_enc"]
