[package]
name = "rustylol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strfmt = "0.1.6"
oauth2 = "4.2.2"
config = "0.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.24"
jsonwebtoken = "8.1.1"
azure_jwt = "0.2.1"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
tokio = "1.25.0"

[dependencies.rocket]
version = "0.5.0-rc"
features = ["json"]

[dependencies.rustbreak]
version = "2"
features = ["ron_enc"]
